<resources>
    <string name="app_name">EShop</string>
    <string name="app_version">V 1.0.0</string>
    <string name="app_copy">"@ Manu App"</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_orders_title">Orders</string>
    <string name="side_nav_wishlist__title">Wishlist</string>
    <string name="side_nav_cart_title">Cart</string>
    <string name="side_nav_message_title">Message</string>
    <string name="side_nav_settings_title">Settings</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">Logout</string>
    <string name="bootom_nav_home_title">Home</string>
    <string name="bottom_nav_category_title">cate</string>
    <string name="bottom_nav_cart_title">c</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="Bottom_nav_cart_title">Cart</string>
    <string name="Bootom_nav_category_title">Category\n</string>
    <string name="search_title">search</string>
    <string name="search_hint">Search Here</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Log In To Eshop\n</string>
    <string name="forgot_password">forgot_password</string>
    <string name="text_signin">Signin</string>
    <string name="text_create_a_new_account">or, create a new account?</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_join_eshop">Join Eshop</string>
    <string name="text_password_must_be_6_character">Password Must Be 6 Character</string>
    <string name="text_sign_in">sign_in</string>
    <string name="text_already_have_a_account">Already Have A account</string>
    <string name="text_password_message">password_message</string>
    <string name="text_signin_account">signin_account</string>
    <string name="text_already_have_a_account_sign_in">Already Have a Account Sign in</string>

</resources>